An Article's id was transformed from BIGSERIAL to UUID